# todo-app

./: Makefile  README.md  pyproject.toml  todo.db
src/todo_app/: __init__.py  command.py  database.py
