[project]
name = "todo-app"
version = "0.1.0"
description = "This is a simple command-line todo application"
readme = "README.md"
authors = [
    { name = "Usman Zubair", email = "uzubair@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "tabulate>=0.9.0",
]

[project.scripts]
todo-app = "todo_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
]
